--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,5 @@
+copy.src.files=false
+copy.src.target=
 index.file=index.php
-url=http://localhost/ordertest/
+run.as=LOCAL
+url=http://127.0.0.1/demos/ordertest
