--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,5 @@
 copy.src.files=false
 copy.src.target=
-debug.url=DEFAULT_URL
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/goods
+url=http://127.0.0.1/demos/ordertest
