--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ protected/runtime/application.log.1
 protected/runtime/application.log.2
 nbproject/
 runtime/*.log
+nbproject/private/private.properties
+nbproject/project.properties
 
