--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 copy.src.files=false
 copy.src.target=
+index.file=index.php
 run.as=LOCAL
-url=http://localhost/index.php/dogovor_archiv
+url=http://127.0.0.1/demos/ordertest/
