--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ protected/runtime/application.log.2
 nbproject/
 nbproject/*.*
 protected/runtime/*.log
-nbproject/private/private.properties
+nbproject/private/private.*
 nbproject/project.properties
+nbproject/*
 
+/nbproject
+/nbproject/project.properties
+/nbproject/private
