--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,4 @@ copy.src.files=false
 copy.src.target=
 index.file=index.php
 run.as=LOCAL
-url=http://site2/goods/
+url=http://localhost/index.php/dogovor_archiv/
