Check limits added

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.target=
 debug.url=DEFAULT_URL
 index.file=index.php
 run.as=LOCAL
-url=http://site2/goods/
+url=http://localhost/demos/ordertest
