fix custom edit rules in dialog claim lines

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,33 @@ nbproject/*
 /nbproject
 /nbproject/project.properties
 /nbproject/private
+/index.php
+/css/dropdownmenu/default.advanced.css
+/css/dropdownmenu/default2.css
+/info.php
+/js/jquery.form_old.js
+/menu.php
+/protected/controllers/ClaimController.bak.php
+/protected/data/data_manufacturer_pg.sql
+/protected/data/data_purpose_pg.sql
+/protected/runtime/application.log.4
+/protected/runtime/gii-1.1.10/CrudCode.php
+/protected/views/claim.bak/1
+/protected/views/claim.bak/_form.php
+/protected/views/claim.bak/_search.php
+/protected/views/claim.bak/_view.php
+/protected/views/claim.bak/admin.php
+/protected/views/claim.bak/create.php
+/protected/views/claim.bak/editClaimWithLinesJq.php
+/protected/views/claim.bak/editClaimWithLinesJq_table_save.php
+/protected/views/claim.bak/editClaimWithLinesJq_wordwrap_frozen_1.php
+/protected/views/claim.bak/editClaimWithLinesJq_wordwrap_frozen_2.php
+/protected/views/claim.bak/index.php
+/protected/views/claim.bak/indexJqgrid.php
+/protected/views/claim.bak/indexJqgrid.php_
+/protected/views/claim.bak/reports/reportgroup.php
+/protected/views/claim.bak/list.php
+/protected/views/claim.bak/show.php
+/protected/views/claim.bak/showJqgrid.php
+/protected/views/claim.bak/update.php
+/protected/views/claim.bak/view.php
